tests/e2e/multiline_comments5.error
Error: syntax error in story at line 1, column 1

1|    /* b = 0
      ^^^^^^^^

E0162: Multiline comment must end with a newline.
