tests/e2e/multiline_comments5.story
/* b = 0
foobar
*/ b = 2